change of css code

--- a/index.html
+++ b/index.html
@@ -178,97 +178,120 @@
       </div>
     </div>
 
-    <section class="table__container">
+    <section class="cube__container">
       <!-- row 1 -->
-      <div class="table__row table__row--1">
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+      <div class="cube__row cube__row--1">
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
       </div>
       <!-- row 2 -->
-      <div class="table__row table__row--2">
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+      <div class="cube__row cube__row--2">
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
       </div>
       <!-- row 3 -->
-      <div class="table__row table__row--3">
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+      <div class="cube__row cube__row--3">
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
       </div>
       <!-- row 4 -->
-      <div class="table__row table__row--4">
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+      <div class="cube__row cube__row--4">
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
-        <div class="table__cube">
-          <span class="table__cube--item table__cube--1"></span>
-          <span class="table__cube--item table__cube--2"></span>
-          <span class="table__cube--item table__cube--3"></span>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
+        </div>
+      </div>
+      <!-- row 5 -->
+      <div class="cube__row cube__row--5">
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
+        </div>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
+        </div>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
+        </div>
+        <div class="cube__shape">
+          <span class="cube__item cube__item--1"></span>
+          <span class="cube__item cube__item--2"></span>
+          <span class="cube__item cube__item--3"></span>
         </div>
       </div>
     </section>
