beginning to think about responsivity

--- a/index.html
+++ b/index.html
@@ -178,123 +178,150 @@
       </div>
     </div>
 
-    <section class="cube__container">
-      <!-- row 1 -->
-      <div class="cube__row cube__row--1">
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
+    <div class="table-cube__container">
+      <div class="cube__container">
+        <!-- row 1 -->
+        <div class="cube__row cube__row--1">
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
         </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
+        <!-- row 2 -->
+        <div class="cube__row cube__row--2">
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
         </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
+        <!-- row 3 -->
+        <div class="cube__row cube__row--3">
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
         </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
+        <!-- row 4 -->
+        <div class="cube__row cube__row--4">
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+        </div>
+        <!-- row 5 -->
+        <div class="cube__row cube__row--5">
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
         </div>
       </div>
-      <!-- row 2 -->
-      <div class="cube__row cube__row--2">
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-      </div>
-      <!-- row 3 -->
-      <div class="cube__row cube__row--3">
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-      </div>
-      <!-- row 4 -->
-      <div class="cube__row cube__row--4">
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-      </div>
-      <!-- row 5 -->
-      <div class="cube__row cube__row--5">
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-        <div class="cube__shape">
-          <span class="cube__item cube__item--1"></span>
-          <span class="cube__item cube__item--2"></span>
-          <span class="cube__item cube__item--3"></span>
-        </div>
-      </div>
-    </section>
+    </div>
 
     <!-- Players section -->
     <div class="players">
