--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
     </div>
 
     <div class="table-cube__container">
+      <div class="table-cube__title">
+        <h2 class="heading-2 heading-2--light">Table</h2>
+      </div>
       <div class="cube__container">
         <!-- row 1 -->
         <div class="cube__row cube__row--1">
@@ -325,9 +328,7 @@
 
     <!-- Players section -->
     <div class="players">
-      <h2 class="heading-2 heading-2--light players__heading">
-        Top 3 Goalscorers
-      </h2>
+      <h2 class="heading-2 heading-2--light">Top 3 Goalscorers</h2>
       <div class="players__list">
         <!-- Player one markup-->
         <img
