--- a/index.html
+++ b/index.html
@@ -205,19 +205,9 @@
             <span class="cube__item cube__item--2"></span>
             <span class="cube__item cube__item--3"></span>
           </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
         </div>
         <!-- row 2 -->
         <div class="cube__row cube__row--2">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
           <div class="cube__shape">
             <span class="cube__item cube__item--1"></span>
             <span class="cube__item cube__item--2"></span>
@@ -261,19 +251,9 @@
             <span class="cube__item cube__item--2"></span>
             <span class="cube__item cube__item--3"></span>
           </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
         </div>
         <!-- row 4 -->
         <div class="cube__row cube__row--4">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
           <div class="cube__shape">
             <span class="cube__item cube__item--1"></span>
             <span class="cube__item cube__item--2"></span>
@@ -302,6 +282,25 @@
             <span class="cube__item cube__item--2"></span>
             <span class="cube__item cube__item--3"></span>
           </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+          <div class="cube__shape">
+            <span class="cube__item cube__item--1"></span>
+            <span class="cube__item cube__item--2"></span>
+            <span class="cube__item cube__item--3"></span>
+          </div>
+        </div>
+        <!-- row 6 -->
+        <!-- row 5 -->
+        <div class="cube__row cube__row--6">
           <div class="cube__shape">
             <span class="cube__item cube__item--1"></span>
             <span class="cube__item cube__item--2"></span>
