major design rethink

--- a/index.html
+++ b/index.html
@@ -173,33 +173,11 @@
           <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
         </div>
       </div>
-      <div class="corporate__container">
-        <h1 class="corporate__header">Example Text</h1>
-      </div>
-    </div>
 
-    <div class="table-cube__container">
-      <div class="table-cube__title">
-        <h2 class="heading-2 heading-2--light">Table</h2>
-      </div>
       <div class="cube__container">
+        <h1 class="cube__header">Building Blocks of our community</h1>
         <!-- row 1 -->
         <div class="cube__row cube__row--1">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
           <div class="cube__shape">
             <span class="cube__item cube__item--1"></span>
             <span class="cube__item cube__item--2"></span>
@@ -218,24 +196,9 @@
             <span class="cube__item cube__item--2"></span>
             <span class="cube__item cube__item--3"></span>
           </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
         </div>
         <!-- row 3 -->
         <div class="cube__row cube__row--3">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
           <div class="cube__shape">
             <span class="cube__item cube__item--1"></span>
             <span class="cube__item cube__item--2"></span>
@@ -297,31 +260,63 @@
             <span class="cube__item cube__item--2"></span>
             <span class="cube__item cube__item--3"></span>
           </div>
-        </div>
-        <!-- row 6 -->
-        <!-- row 5 -->
-        <div class="cube__row cube__row--6">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
           <div class="cube__shape">
             <span class="cube__item cube__item--1"></span>
             <span class="cube__item cube__item--2"></span>
             <span class="cube__item cube__item--3"></span>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="table__container">
+      <div class="table__title">
+        <h2 class="heading-2 heading-2--light">Standings</h2>
+      </div>
+
+      <div class="ptable">
+        <table>
+          <tr class="col">
+            <th>Position</th>
+            <th>Team</th>
+            <th>GP</th>
+            <th>W</th>
+            <th>D</th>
+            <th>L</th>
+            <th>GD</th>
+            <th>Points</th>
+          </tr>
+          <tr class="wpos">
+            <th>1</th>
+            <th>Team</th>
+            <th>15</th>
+            <th>12</th>
+            <th>2</th>
+            <th>1</th>
+            <th>28</th>
+            <th>36</th>
+          </tr>
+          <tr class="wpos">
+            <th>2</th>
+            <th>FC Longview Lions</th>
+            <th>15</th>
+            <th>10</th>
+            <th>3</th>
+            <th>2</th>
+            <th>16</th>
+            <th>33</th>
+          </tr>
+          <tr class="wpos">
+            <th>3</th>
+            <th>E.G.F.C</th>
+            <th>15</th>
+            <th>7</th>
+            <th>5</th>
+            <th>3</th>
+            <th>18</th>
+            <th>26</th>
+          </tr>
+        </table>
       </div>
     </div>
 
