--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
       </div>
 
       <div class="cube__container">
-        <h1 class="cube__header">Building Blocks of our community</h1>
+        <h2 class="heading-2 heading-2--light cube__header">
+          Building Blocks of our community
+        </h2>
         <!-- row 1 -->
         <div class="cube__row cube__row--1">
           <div class="cube__shape">
