more style changes

--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
       </div>
 
       <div class="cube__container">
-        <h2 class="heading-2 heading-2--light cube__header">
-          Building Blocks of our community
-        </h2>
+        <h3 class="heading-3 cube__header">Building Blocks of our community</h3>
         <!-- row 1 -->
         <div class="cube__row cube__row--1">
           <div class="cube__shape">
