much better layout of building blocks

--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
       </div>
 
       <div class="cube__container">
-        <h3 class="heading-3 cube__header">Building Blocks of our community</h3>
+        <h3 class="heading-3 cube__header">
+          Building Blocks of our community...
+        </h3>
         <!-- row 1 -->
         <div class="cube__row cube__row--1">
           <div class="cube__shape">
