working on markup of table

--- a/index.html
+++ b/index.html
@@ -279,14 +279,14 @@
       <div class="ptable">
         <table>
           <tr class="col">
-            <th>Position</th>
+            <th>#</th>
             <th>Team</th>
             <th>GP</th>
             <th>W</th>
             <th>D</th>
             <th>L</th>
             <th>GD</th>
-            <th>Points</th>
+            <th>PTS</th>
           </tr>
           <tr class="wpos">
             <th>1</th>
@@ -300,7 +300,7 @@
           </tr>
           <tr class="wpos">
             <th>2</th>
-            <th>FC Longview Lions</th>
+            <th>FC Lions</th>
             <th>15</th>
             <th>10</th>
             <th>3</th>
