--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
         <h2 class="heading-2 heading-2--light">Standings</h2>
       </div>
 
-      <div class="ptable">
+      <div class="table__container">
         <table>
-          <tr class="col">
+          <tr class="">
             <th>#</th>
             <th>Team</th>
             <th>GP</th>
@@ -290,7 +290,7 @@
           </tr>
           <tr class="wpos">
             <th>1</th>
-            <th>Team</th>
+            <th>FC THG 08</th>
             <th>15</th>
             <th>12</th>
             <th>2</th>
@@ -310,7 +310,7 @@
           </tr>
           <tr class="wpos">
             <th>3</th>
-            <th>E.G.F.C</th>
+            <th>E. G. F. C</th>
             <th>15</th>
             <th>7</th>
             <th>5</th>
