--- a/index.html
+++ b/index.html
@@ -271,14 +271,15 @@
       </div>
     </div>
 
-    <div class="table__container">
-      <div class="table__title">
+    <!-- games section -->
+    <div class="games__container">
+      <div class="games__title">
         <h2 class="heading-2 heading-2--light">Standings</h2>
       </div>
 
-      <div class="table__container">
+      <div class="table__content">
         <table>
-          <tr class="">
+          <tr class="table__headers">
             <th>#</th>
             <th>Team</th>
             <th>GP</th>
@@ -288,7 +289,7 @@
             <th>GD</th>
             <th>PTS</th>
           </tr>
-          <tr class="wpos">
+          <tr class="table__row">
             <th>1</th>
             <th>FC THG 08</th>
             <th>15</th>
@@ -298,7 +299,7 @@
             <th>28</th>
             <th>36</th>
           </tr>
-          <tr class="wpos">
+          <tr class="table__row">
             <th>2</th>
             <th>FC Lions</th>
             <th>15</th>
@@ -308,7 +309,7 @@
             <th>16</th>
             <th>33</th>
           </tr>
-          <tr class="wpos">
+          <tr class="table__row">
             <th>3</th>
             <th>E. G. F. C</th>
             <th>15</th>
