--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <th>GD</th>
             <th>PTS</th>
           </tr>
-          <tr class="table__row">
+          <tr class="table__row table__row--THG">
             <th>1</th>
             <th>FC THG 08</th>
             <th>15</th>
@@ -299,7 +299,7 @@
             <th>28</th>
             <th>36</th>
           </tr>
-          <tr class="table__row">
+          <tr class="table__row table__row--Lions">
             <th>2</th>
             <th>FC Lions</th>
             <th>15</th>
@@ -309,7 +309,7 @@
             <th>16</th>
             <th>33</th>
           </tr>
-          <tr class="table__row">
+          <tr class="table__row table__row--EGFC">
             <th>3</th>
             <th>E. G. F. C</th>
             <th>15</th>
