--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 
     <!-- games section -->
     <div class="games__container">
-      <div class="games__title">
+      <div class="games__title table__title">
         <h2 class="heading-2 heading-2--light">Standings</h2>
       </div>
 
       <div class="table__content">
         <table>
-          <tr class="table__headers">
+          <tr class="table__header">
             <th>#</th>
             <th>Team</th>
             <th>GP</th>
@@ -320,6 +320,9 @@
             <th>26</th>
           </tr>
         </table>
+      </div>
+      <div class="games__title match__title">
+        <h2 class="heading-2 heading-2--light">Matches</h2>
       </div>
     </div>
 
