start of shirt sales segments

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
     </div>
 
     <!-- games section -->
-    <div class="games__container">
-      <div class="games__title table__title">
+    <div class="table-sale__container">
+      <div class="table__title">
         <h2 class="heading-2 heading-2--light">Standings</h2>
       </div>
 
@@ -320,6 +320,13 @@
             <th>26</th>
           </tr>
         </table>
+      </div>
+      <div class="shirt-sale__container">
+        <img class="shirt-sale__image" src="img/shirt-sale.png" />
+        <div class="shirt-sale__caption">
+          <h1>amazing caption</h1>
+          <p>you can write anything here!</p>
+        </div>
       </div>
     </div>
 
