--- a/index.html
+++ b/index.html
@@ -277,48 +277,50 @@
         <h2 class="heading-2 heading-2--light">Standings</h2>
       </div>
 
-      <table class="table__content">
-        <tr class="table__header">
-          <th>#</th>
-          <th>Team</th>
-          <th>GP</th>
-          <th>W</th>
-          <th>D</th>
-          <th>L</th>
-          <th>GD</th>
-          <th>PTS</th>
-        </tr>
-        <tr class="table__row table__row--THG">
-          <th>1</th>
-          <th>FC THG 08</th>
-          <th>15</th>
-          <th>12</th>
-          <th>2</th>
-          <th>1</th>
-          <th>28</th>
-          <th>36</th>
-        </tr>
-        <tr class="table__row table__row--Lions">
-          <th>2</th>
-          <th>FC Lions</th>
-          <th>15</th>
-          <th>10</th>
-          <th>3</th>
-          <th>2</th>
-          <th>16</th>
-          <th>33</th>
-        </tr>
-        <tr class="table__row table__row--EGFC">
-          <th>3</th>
-          <th>E. G. F. C</th>
-          <th>15</th>
-          <th>7</th>
-          <th>5</th>
-          <th>3</th>
-          <th>18</th>
-          <th>26</th>
-        </tr>
-      </table>
+      <div class="table__container">
+        <table class="table__content">
+          <tr class="table__header">
+            <th>#</th>
+            <th>Team</th>
+            <th>GP</th>
+            <th>W</th>
+            <th>D</th>
+            <th>L</th>
+            <th>GD</th>
+            <th>PTS</th>
+          </tr>
+          <tr class="table__row table__row--THG">
+            <th>1</th>
+            <th>FC THG 08</th>
+            <th>15</th>
+            <th>12</th>
+            <th>2</th>
+            <th>1</th>
+            <th>28</th>
+            <th>36</th>
+          </tr>
+          <tr class="table__row table__row--Lions">
+            <th>2</th>
+            <th>FC Lions</th>
+            <th>15</th>
+            <th>10</th>
+            <th>3</th>
+            <th>2</th>
+            <th>16</th>
+            <th>33</th>
+          </tr>
+          <tr class="table__row table__row--EGFC">
+            <th>3</th>
+            <th>E. G. F. C</th>
+            <th>15</th>
+            <th>7</th>
+            <th>5</th>
+            <th>3</th>
+            <th>18</th>
+            <th>26</th>
+          </tr>
+        </table>
+      </div>
 
       <div class="shirt-sale__container">
         <img class="shirt-sale__image" src="img/shirt-sale.png" />
