cube design taken out

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
     </section>
 
-    <div class="ss-corp__container">
+    <div class="sea-serpent__container">
       <!-- Sea serpent section -->
       <div class="sea-serpent__content">
         <div class="sea-serpent__ripple">
@@ -171,102 +171,6 @@
           <span class="sea-sepent__ripple--effect" style="--i: 8"></span>
           <span class="sea-sepent__ripple--effect" style="--i: 9"></span>
           <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
-        </div>
-      </div>
-
-      <div class="cube__container">
-        <h4 class="heading-4 cube__header">
-          Building Blocks of our community...
-        </h4>
-        <!-- row 1 -->
-        <div class="cube__row cube__row--1">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-        </div>
-        <!-- row 2 -->
-        <div class="cube__row cube__row--2">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-        </div>
-        <!-- row 3 -->
-        <div class="cube__row cube__row--3">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-        </div>
-        <!-- row 4 -->
-        <div class="cube__row cube__row--4">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-        </div>
-        <!-- row 5 -->
-        <div class="cube__row cube__row--5">
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
-          <div class="cube__shape">
-            <span class="cube__item cube__item--1"></span>
-            <span class="cube__item cube__item--2"></span>
-            <span class="cube__item cube__item--3"></span>
-          </div>
         </div>
       </div>
     </div>
