beginning of wave effect

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </tr>
             <tr class="table__row table__row--THG">
               <th>1</th>
-              <th>FC THG 08</th>
+              <th>FC THG</th>
               <th>15</th>
               <th>12</th>
               <th>2</th>
@@ -202,7 +202,7 @@
             </tr>
             <tr class="table__row table__row--Lions">
               <th>2</th>
-              <th>FC Lions</th>
+              <th>FC Lions 08</th>
               <th>15</th>
               <th>10</th>
               <th>3</th>
